# slh-dsa-128s-poseidon-bench

./: .gitignore  README.md
.github/workflows/: circom-tests.yaml  compile-circuits.yaml  ecdsa-spartan2.yaml  mobile-tests.yaml  rust-tests.yaml  web-tests.yaml
specs/: README.md
specs/1-openac/: OPEN-QUESTIONS.md  README.md  SOURCE-MATRIX.md
specs/1-openac-core/: OPEN-QUESTIONS.md  README.md  SOURCE-MATRIX.md
specs/2-zk-human-verification/: README.md
specs/3-zk-age-eligibility/: README.md
wallet-unit-poc/: README.md
wallet-unit-poc/circom/: .mocharc.json  README.md  SPEC.md  circuits.json  package.json
wallet-unit-poc/circom/benchmarks/: README.md  REPORT.md  configs.json
wallet-unit-poc/circom/benchmarks/inputs/: OP_eq_n10_m4.json  OP_le_n10_m4.json  REF_claim_n10_m4.json  S1_m1_n10.json  S1_m2_n10.json  S1_m4_n10.json  S1_m8_n10.json  S2_n10_m1.json  S2_n1_m1.json  S2_n20_m1.json  S2_n30_m1.json  S2_n5_m1.json
wallet-unit-poc/circom/benchmarks/results/: constraints-data.json  constraints.md
wallet-unit-poc/circom/circuits/: cert_chain.circom  device_sig.circom  jwt_rs256.circom  mdoc.circom  rs256.circom
wallet-unit-poc/circom/circuits/_bench_main/: OP_le_n10_m4.circom  S1_m1_n10.circom  S1_m2_n10.circom  S1_m8_n10.circom  S2_n1_m1.circom  S2_n20_m1.circom  S2_n30_m1.circom  S2_n5_m1.circom
wallet-unit-poc/circom/circuits/components/: mdoc-claim-verifier.circom  mdoc-device-key.circom  mdoc-validity.circom  mdoc-value-extractor.circom  pk_commit.circom  poseidon_p256.circom  poseidon_p256_constants.circom  smt-nonmembership.circom  smt_hash_p256.circom  smt_verifier_p256.circom
wallet-unit-poc/circom/circuits/main/: cert_chain_rs2048.circom  cert_chain_rs4096.circom  device_sig_rs2048.circom  jwt_rs256.circom  mdoc.circom  rs256.circom  sha256rsa2048.circom  sha256rsa4096.circom  slh_dsa_128s_poseidon_1k.circom
wallet-unit-poc/circom/circuits/utils/: utils.circom
wallet-unit-poc/circom/docs/: mdoc-spec.md
wallet-unit-poc/circom/inputs/cert_chain_rs2048/: input.json
wallet-unit-poc/circom/inputs/cert_chain_rs4096/: input.json
wallet-unit-poc/circom/inputs/device_sig_rs2048/: input.json
wallet-unit-poc/circom/scripts/: compile.sh  gen_poseidon_p256_constants.mjs
wallet-unit-poc/circom/src/: generate-inputs.ts  generate-mdoc-inputs.ts  jwt_rs256.ts  mdoc-fixture.ts  mdoc.ts  smt_proof.ts
wallet-unit-poc/docs/: README.md  circuit-rust-optimization.md
wallet-unit-poc/ecdsa-spartan2/: .gitignore  Cargo.toml  README.md  build.rs  output.txt
wallet-unit-poc/ecdsa-spartan2/benchmarks/results/: OP_eq_n10_m4.json  OP_le_n10_m4.json  REF_claim_n10_m4.json  S1_m1_n10.json  S1_m2_n10.json  S1_m4_n10.json  S1_m8_n10.json  S2_n10_m1.json  S2_n1_m1.json  S2_n20_m1.json  S2_n30_m1.json  S2_n5_m1.json  show-timings.md
wallet-unit-poc/ecdsa-spartan2/benchmarks/scripts/: run-show-bench.sh
wallet-unit-poc/ecdsa-spartan2/examples/: generate_fixtures.rs
wallet-unit-poc/ecdsa-spartan2/src/: challenge_client.rs  hipki_client.rs  lib.rs  main.rs  paths.rs  prover.rs  reader.rs  setup.rs  smt_client.rs  utils.rs
wallet-unit-poc/ecdsa-spartan2/src/circuits/: cert.rs  circuit.rs  encoding.rs  jwt_rs256_circuit.rs  mdoc_circuit.rs  mod.rs  prepare_circuit.rs  rs256_circuit.rs  sha256rsa_circuit.rs  show_circuit.rs  split_circuits.rs  types.rs
wallet-unit-poc/ecdsa-spartan2/tests/: fixture_consistency.rs  split_input_generation.rs
wallet-unit-poc/ecdsa-spartan2/tests/testdata/: pkcs11info_test.json  response_sign_test.json  rs4096_response_sign.json  test_ca_rs4096.der
wallet-unit-poc/mobile/: .gitignore  Cargo.toml
wallet-unit-poc/mobile/flutter/: pubspec.yaml
wallet-unit-poc/mobile/flutter/ios/Runner.xcodeproj/: project.pbxproj
wallet-unit-poc/mobile/flutter/lib/: main.dart
wallet-unit-poc/mobile/mopro_flutter_bindings/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
wallet-unit-poc/mobile/mopro_flutter_bindings/rust/: Cargo.toml
wallet-unit-poc/mobile/mopro_flutter_bindings/rust/src/: frb_generated.rs
wallet-unit-poc/mobile/src/: lib.rs  smt.rs
wallet-unit-poc/openac-sdk/src/: wasm-bridge.ts  witness-calculator.ts
wallet-unit-poc/openac-sdk/wasm/: Cargo.toml
wallet-unit-poc/scripts/: generate_rsa_jwt.py  requirements.txt
wallet-unit-poc/slh-dsa-spartan2/: .gitignore  Cargo.toml  README.md  build.rs
wallet-unit-poc/slh-dsa-spartan2/src/: lib.rs  main.rs  paths.rs  prover.rs  setup.rs  utils.rs
wallet-unit-poc/slh-dsa-spartan2/src/circuits/: mod.rs  slh_dsa_circuit.rs
wallet-unit-poc/spartan2-wasm/: Cargo.toml  README.md
wallet-unit-poc/spartan2-wasm/.cargo/: config.toml
wallet-unit-poc/spartan2-wasm/src/: inputs.rs  lib.rs
wallet-unit-poc/spartan2-wasm/tests/: input_builder_drift.rs  native_drift.rs
wallet-unit-poc/test_data/: rsa_jwt_test.json
wallet-unit-poc/web/: .gitignore  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  prove.html  vite.config.ts
wallet-unit-poc/web-app/: next.config.ts  package.json
wallet-unit-poc/web-app/app/: layout.tsx  page.tsx
wallet-unit-poc/web-app/components/: JsonViewer.tsx  ResultBadge.tsx  StatusBanner.tsx  StepCard.tsx  Stepper.tsx  TimingLog.tsx
wallet-unit-poc/web-app/lib/: sdk-server.ts  serialize.ts  test-data.ts
wallet-unit-poc/web/e2e/: mock-services.ts  prove-fixtures.spec.ts  prove-negative.spec.ts  prove-real.spec.ts
wallet-unit-poc/web/scripts/: build-wasm.sh  check-no-pin-leak.sh  copy-assets.sh
wallet-unit-poc/web/src/: asset-download.test.ts  asset-download.ts  asset-store.ts  bytes.test.ts  bytes.ts  format.ts  hipki-client.test.ts  hipki-popup.ts  inputs.ts  manifest.ts  pipeline.ts  progress.ts  prove-main.ts  setup-state.ts  sign-main.ts  smt-local.ts  smt-snapshot.ts  storage-handoff.ts  store.test.ts  store.ts  style.css  ui.ts  verifier-client.test.ts  verifier-client.ts  witness.ts  worker-lifecycle.ts  worker.ts
wallet-unit-poc/zkid-input-builder/: Cargo.toml  README.md
wallet-unit-poc/zkid-input-builder/src/: cert.rs  encoding.rs  lib.rs  split_inputs.rs  types.rs
(+37 files in other folders)
