[package]
name = "ecdsa-spartan2"
version = "0.0.1"
edition = "2021"

[lib]
name = "ecdsa_spartan2"
path = "src/lib.rs"

[[bin]]
name = "ecdsa-spartan2"
path = "src/main.rs"

[features]
default = []
cert_chain_rs2048 = []
cert_chain_rs4096 = []
device_sig_rs2048 = []

[dependencies]
zkid-input-builder = { path = "../zkid-input-builder" }
spartan2 = { git = "https://github.com/0xVikasRushi/Spartan2.git", branch = "openac-sdk", default-features = false }
web-time = "1.1"
circom-scotia = { git = "https://github.com/0xVikasRushi/circom-scotia", branch = "main" }
bellpepper = "0.4.0"
bellpepper-core = "0.4.0"
ff = { version = "0.13.0", features = ["derive"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
sha2 = { version = "0.10", features = ["oid"] }
bincode = "1.3.3"
memmap2 = "0.9.8"
witnesscalc-adapter = { git = "https://github.com/zkmopro/witnesscalc_adapter.git", branch = "secq256r1-support" }
num-bigint = "0.4.6"
base64 = "0.22"
x509-cert = "0.2"
rsa = "0.9"
der = { version = "0.7", features = ["derive"] }
const-oid = { version = "0.9", features = ["db"] }
hex = "0.4.3"
ureq = { version = "2", features = ["json"] }
subtle = "2"
anyhow = "1"
mimalloc = { version = "0.1", default-features = false }

[dev-dependencies]
x509-cert = { version = "0.2", features = ["builder"] }
rand_chacha = "0.3"
rsa = { version = "0.9", features = ["sha2"] }

[build-dependencies]
witnesscalc-adapter = { git = "https://github.com/zkmopro/witnesscalc_adapter.git", branch = "secq256r1-support" }
chkstk_stub = { version = "0.1.0" }

[profile.release]
debug = true
