[package]
name = "ecdsa-spartan2"
version = "0.0.1"
edition = "2021"

[lib]
name = "ecdsa_spartan2"
path = "src/lib.rs"

[[bin]]
name = "ecdsa-spartan2"
path = "src/main.rs"

[[bin]]
name = "bench_show"
path = "src/bin/bench_show.rs"
required-features = ["native-witness"]

[features]
default = ["native-witness"]
# Enable native witness calculation via witnesscalc_adapter (requires C++ toolchain).
# Disable this for WASM builds where witnesses are generated in JavaScript.
native-witness = ["dep:witnesscalc-adapter"]

[dependencies]
spartan2 = { git = "https://github.com/0xVikasRushi/Spartan2.git", branch = "openac-sdk", default-features = false }
circom-scotia = { git = "https://github.com/0xVikasRushi/circom-scotia", branch="feat/spartan2", default-features = false }

bellpepper = "0.4.0"
bellpepper-core = "0.4.0"
ff = { version = "0.13.0", features = ["derive"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
sha2 = "0.10.7"
bincode = "1.3.3"
memmap2 = "0.9.8"
witnesscalc-adapter = { git = "https://github.com/zkmopro/witnesscalc_adapter.git", branch = "secq256r1-support", optional = true }
num-bigint = "0.4.6"
base64 = "0.22"

[build-dependencies]
witnesscalc-adapter = { git = "https://github.com/zkmopro/witnesscalc_adapter.git", branch = "secq256r1-support", optional = true }

[profile.release]
debug = true
