[package]
name = "spartan2-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zkid-input-builder = { path = "../zkid-input-builder" }
spartan2 = { git = "https://github.com/0xVikasRushi/Spartan2.git", branch = "openac-sdk", default-features = false }
bellpepper-core = "0.4.0"
ff = "0.13.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
wasm-bindgen-rayon = "1.2"
rayon = "1.10.0"
getrandom = { version = "0.2", features = ["js"] }
x509-cert = "0.2"
sha2 = "0.10"
num-bigint = "0.4"
rsa = "0.9"

[dev-dependencies]
# For native-target drift tests ONLY — never compiled for wasm32.
ecdsa-spartan2 = { path = "../ecdsa-spartan2", features = ["cert_chain_rs2048", "cert_chain_rs4096", "device_sig_rs2048"] }
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
