[package]
name = "zkid-input-builder"
version = "0.1.0"
edition = "2021"
description = "Shared cert-chain + device-sig circuit input builder for the zkID RS256 split circuits. Consumed by ecdsa-spartan2 (native prover) and spartan2-wasm (in-browser prover)."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4"
sha2 = "0.10"
base64 = "0.22"
x509-cert = "0.2"
rsa = "0.9"
der = { version = "0.7", features = ["derive"] }
hex = "0.4"
